Switched #container to #content to avoid jumping of footer links

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -360,7 +360,7 @@ span.search_topic_count 	{
 	text-align: center;
 	background-color: #c9c9c9;
 	padding: 5px;
-	border-radius: 15px;
+	border-radius: 7px;
 	color:#333;
 	font-size: 12px;
 	font-weight: bold;
